# ghostfighter

./: .gitignore  .vercelignore  Makefile  PORTFOLIO_PITCH.md  README.md  TECHNICAL_DESIGN.md  pyproject.toml  requirements.txt
configs/: gen0_policies.json
ghostfighter/: __init__.py  analysis.py  attributes.py  backends.py  cli.py  config.py  dataset.py  domain.py  env.py  evaluate.py  improve.py  models.py  policies.py  render.py  replay.py  rl.py  robustness.py  safety.py  selfplay.py  train.py  vector_env.py
reference_run/: RUN_CARD.md
reference_run/data/: traces.summary.json
reference_run/models/: ghost_policy.pt  training_curve.csv  training_metrics.json
reference_run/reports/: eval_summary.json  match_results.csv  scripted_baseline.csv  scripted_baseline_summary.json
scripts/: reviewer_smoke_test.sh  run_full_demo.py  run_reference_pipeline.sh
tests/: test_env.py  test_pipeline.py  test_safety.py
web/: index.html  package-lock.json  package.json
web/src/: main.ts  styles.css
